Fix spacing under figures
Added a bottom margin to the figure element so there is adequate spacing
between it and whatever comes after it.

--- a/layouts/partials/css/figure.css
+++ b/layouts/partials/css/figure.css
@@ -20,3 +20,7 @@ figure figcaption p {
   margin-top: 1rem;
   margin-bottom: 0;
 }
+
+figure figcaption {
+  margin-bottom: 1em;
+}
